Fix clipping on featured records and exhibits.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -1072,7 +1072,6 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 #featured-collection,
 #featured-exhibit {
     margin-bottom: $spacing-unit;
-    overflow: auto;
 
     .subtitle {
         display: block;
@@ -1090,6 +1089,7 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
         float: none;
         height: auto;
         margin-bottom: .5 * $spacing-unit;
+        margin-left: 0;
     }
 }
 
